# CodeWritteninCourse

NEU/EECE5640/hw1/: 5640_a1  5640_a1_1  Q2.cpp  a1.md
NEU/EECE5640/hw1/Homework1_JiayunXin/: Q2.cpp
NEU/EECE5640/hw2_new/: Q1.cpp  Q2a.cpp  README_Q1.md  README_Q2.md
NEU/EECE5640/hw3/: EECE5640_a3_JiayunXin.docx  q1a  q2  q2.cpp  q3.cpp  q33.cpp  q4.cpp  ~$CE5640_a3_JiayunXin.docx
NEU/EECE5640/hw3/Homework3_JiayunXin/: q1a.cpp  q1b.cpp  q2.cpp  q3.cpp  q4.cpp  readme_q1.md  readme_q2.md  readme_q3.md  readme_q4.md
NEU/EECE5640/hw4/: EECE5640_a4_JiayunXin.docx  sample.script
NEU/EECE5640/hw4/Homework4_JiayunXin/: q1.cpp  q2a.cpp  q2b.cpp  readme.md
NEU/EECE5640/hw5/: EECE5640_a5_JiayunXin.docx  hpc.tar
NEU/EECE5640/hw5/Homework5_JiayunXin/: q1.cu  q2.cu  q4.cu  readme.md
NEU/EECE5640/hw5/hpc/: hpc_hw5q1.cu  hpc_hw5q2t.cu  hpc_hw5q4.cu  q1.cu
NEU/EECE5644/: MachineLearning
NEU/EECE5644/A1/: a1.docx
NEU/EECE5644/A1/code/: EECE5644_A1_Q2.m  EECE5644_A1_Q3.m  EECE5644_A1_Q3B.m  (+1 more)
NEU/EECE5644/A2/: ~$a2.docx
NEU/EECE5644/A3/: EECE5644_Jiayun_A3.docx
NEU/EECE5644/A4/: EECE5644_HW4_JiayunXin.docx
NEU/EECE5698/final/: Makefile.in  ethernet-connector.cpp  ethernet-connector.h  modem.cpp  modem.h  tcp-server-connection.cpp  tcp-server-connection.h
NEU/EECE5698/lab6-sol/homework-fall-2022/autotools-structure/examples/lab_5_example/: Makefile.am  ethernet-connector.cpp  ethernet-connector.h  lab-5-example.cpp  tcp-client-fwd.cpp  tcp-client-fwd.h
NEU/EECE7370/finaProject/: StarGAN.docx  finalProjectReport.docx
NEU/EECE7370/tut/: 7370pre.pptx  tut.docx
(+63 files in other folders)
