#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = lab_5_example

lab_5_example_SOURCES = lab-5-example.cpp ethernet-connector.cpp tcp-client-fwd.cpp

lab_5_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
lab_5_example_LDFLAGS = @PFICT_LDFLAGS@
lab_5_example_LDADD = @PFICT_LDADD@ 